Bound container memory and pick a garbage collector per service